--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
   <div class="stamp" id="stamp">STAMP</div>
   <div class="letter" id="letter">
     <div class="message">
+      🎉🎉🎉Happy Birthday Divya!!! 🎉🎉🎉
       🎉 I hope your day is filled with cake, chaos, and at least one person singing off-key just for you! 😜<br><br>
       Now, I know what you're thinking... “Where’s this person who always promises to hang out but disappears like my charger when I need it?”<br><br>
       Well... guilty as charged 🙈 I’m really sorry for not spending enough time with you lately. Life turned into a circus and I forgot I was supposed to be the clown hanging out with you. 🤡<br><br>
